spring mvc frontController usage(v1,v2)

--- a/servlet/src/main/resources/application.properties
+++ b/servlet/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 logging.level.org.apache.coyote.http11=debug
+#spring.thymeleaf.prefix=classpath:/nop
+#spring.thymeleaf.enabled=false
+#server.servlet.jsp.class-name=org.apache.catalina.servlets.DefaultServlet
